# rss-json-service

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  jasmine.json  package-lock.json  package.json
.github/workflows/: main.yml
ansible/: db_create_pb.yml
ansible/tasks/: create_db.yml
pg-scripts/: 2021-06-13_create_db.sql
src/: httpRequest.js  lib.rs  main.js  main.rs  objectMerger.js  rssJsObjectParser.js  sha256hash.js  utils.js  xmlParser.js
src/repo/: channel.rs  feed.rs  item.rs  mod.rs
src/rss_feed/: mod.rs  test.rs
testFiles/: bots.xml  c-radar.xml  chaosradio.xml  clh.xml  embedded_fm.xml  empty.xml  exponent.xml  francais_facil.xml  friday_night_comedy.xml  gidg.xml  iot.xml  lanonc.xml  lin_digres.xml  makingit.xml  nodeup.xml  partially.xml  spark.xml  sparkgap.xml  ted.xml  this_devs_life.xml
test_src/: objectMerger.test.js  rssJsObjectParser.test.js
