[package]
name = "rss-json-service"
version = "0.1.0"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
roxmltree = "0"
chrono ="0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0", features = ["with-uuid-0_8"] }
uuid = { version = "0.8", features = ["v4"] }
