[package]
name = "rss-json-service"
version = "0.1.0"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
roxmltree = "0"
chrono = { version = "0", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0", features = ["with-uuid-0_8", "with-chrono-0_4"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
hyper = { version = "0", features = ["client", "http1", "runtime", "tcp", "stream"] }
hyper-tls = "0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = "1"
serde_json = "1.0"
log = "0"
env_logger = "0"
